combined functions to call one drawBarChart function at the end on document.ready. There are some css issues if font sizes selected are too large. Not yet capable of stacking bar data -- only works with one y value at this point. >

--- a/bar-chart.css
+++ b/bar-chart.css
@@ -5,7 +5,7 @@ main {
 
 body {
   font-size: 18px;
-  color: blue;
+  color: black;
   margin: 1em;
 
 }
@@ -26,7 +26,6 @@ body {
   display: flex;
   align-items: flex-end;
   width: 75vw;
-  /* height:75vh; */
   border-style: solid;
   border-color: gray;
   background-color: white;
